fix left alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -94,13 +94,13 @@ firstp {
 .navbar-brand-name > {
 
 	display: inline-block;
-	float: none;
+	float: left;
   
 }
   
 .navbar-brand-name > img {
 	display: inline-block;
-	float: none;
+	float: left;
 	padding: 0 10px 0 0;
 	margin-bottom: 0px; 
     margin-top: -5px; 
